--- a/components/1/component.html
+++ b/components/1/component.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>WSP Component: Firstname Lastname</title>
+	<title>WSP Component: Janay Peters</title>
 
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
@@ -11,6 +11,7 @@
 <body>
 
 	<!-- Component -->
+<img src="header.png" alt="Header"/>
 
 	<!-- End Component -->
 	
