--- a/components/1/component.html
+++ b/components/1/component.html
@@ -13,6 +13,12 @@
 	<!-- Component -->
 <img src="header.png" alt="Header"/>
 
+	<h1>What I hope to learn</h1>
+	I hope to learn how to make my navigation bar position where and how I want it to go. Positioning and sizing are two main parts
+	of creating this, which are things I struggle with.
+
+	
+
 	<!-- End Component -->
 	
 </body>
