--- a/components/1/component.html
+++ b/components/1/component.html
@@ -14,11 +14,13 @@
 <img src="header.png" alt="Header"/>
 
 	<h1>What I hope to learn</h1>
-	I hope to learn how to make my navigation bar position where and how I want it to go. Positioning and sizing are two main parts
-	of creating this, which are things I struggle with.
+	I hope to learn how to make my navigation bar position where and how I want it to go. Positioning, sizing, floating, and in-line block are the main parts
+	of creating this, which are things I struggle with so I know it will be a challenge.
 
-	
-
+	<h1>How I feel this relates to what I have learned</h1>
+	Well, I know that a navigation is easy access to the other main components of the website (Contacts, Information, or a gallery). The navigation is
+	one of the nost important parts of the web page to me, because it is the first thing you see other than the logo. I have also learned that there
+	are many different styles of the navigation. I will be using a simple one, but they all accomplish the same thing; allowing the user to navigate quickly and easly.
 	<!-- End Component -->
 	
 </body>
