--- a/components/2/component.html
+++ b/components/2/component.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>WSP Component: Firstname Lastname</title>
+	<title>WSP Component 2: Janay Peters</title>
 
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
@@ -11,7 +11,12 @@
 <body>
 
 	<!-- Component -->
+<img src="What we do.png" alt="About Us"/>
 
+	<h1>What I hope to learn</h1>
+	I hope to learn how to better use inline and float. I know that this will be my main objective for most of these
+	components, because it is one of those things that I just don't get. I hope to be able to position the icons
+	where they belong, as well as line up the text "in-line" below.
 	<!-- End Component -->
 	
 </body>
