Component 2: About Us
“How I feel this relates to what I’ve learned”

--- a/components/2/component.html
+++ b/components/2/component.html
@@ -17,6 +17,11 @@
 	I hope to learn how to better use inline and float. I know that this will be my main objective for most of these
 	components, because it is one of those things that I just don't get. I hope to be able to position the icons
 	where they belong, as well as line up the text "in-line" below.
+
+	<h1>How I feel this relates to what I've learned</h1>
+	I feel this relates to the page that I created in one of my other classes. We were to look at the picture and recreate it
+	through code and I had such a hard time creating the "About us" due to inline and Float, so hopefully this time I will be able
+	to pick it up.
 	<!-- End Component -->
 	
 </body>
