Component 3: Our Creators
“What I hope to learn”

--- a/components/3/component.html
+++ b/components/3/component.html
@@ -11,7 +11,10 @@
 <body>
 
 	<!-- Component -->
+<img src="Our Creators.png" alt="Our Creators"/>
 
+	<h1>What I hope to learn</h1>
+	
 	<!-- End Component -->
 	
 </body>
