Component 3: Our Creators
“What I hope to learn”

--- a/components/3/component.html
+++ b/components/3/component.html
@@ -14,7 +14,8 @@
 <img src="Our Creators.png" alt="Our Creators"/>
 
 	<h1>What I hope to learn</h1>
-	
+	This component is similar to the last. I hope to be able to create this as and feel confident that I have done it correctly, but also know
+	what I want to do before drawing up any code.
 	<!-- End Component -->
 	
 </body>
