Component 3: Our Creators
“How I feel this relates to what I have learned”

--- a/components/3/component.html
+++ b/components/3/component.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>WSP Component: Firstname Lastname</title>
+	<title>WSP Component 3: Janay Peters</title>
 
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
@@ -14,8 +14,13 @@
 <img src="Our Creators.png" alt="Our Creators"/>
 
 	<h1>What I hope to learn</h1>
-	This component is similar to the last. I hope to be able to create this as and feel confident that I have done it correctly, but also know
-	what I want to do before drawing up any code.
+	This component is similar to the last. I hope to be able to create this and feel confident that I have done it correctly, but also know
+	what I how to do it before drawing up any code.
+
+	<h1>How I feel this relates to what I have learned</h1>
+	I feel that this relates to many of the issues that I have when it comes to coding. Creating a section that shows "Our creators"
+	allows the user to get a feel of who created this page and all about who they are. I like seeing these things on websites because it's interesting
+	to see other developers background.
 	<!-- End Component -->
 	
 </body>
