--- a/components/4/component.html
+++ b/components/4/component.html
@@ -11,7 +11,11 @@
 <body>
 
 	<!-- Component -->
+<img src="Testimonial Pagination.png" alt="Testimonial"/>
 
+	<h1>What I plan to learn</h1>
+	I plan to learn how to align my arrows, images, and text in there correct places. I know that I will still use Float and inline tags.
+	I really love to see testimonials on a website because it really sends a good message to the users or potential buyers.
 	<!-- End Component -->
 	
 </body>
