--- a/components/4/component.html
+++ b/components/4/component.html
@@ -16,6 +16,10 @@
 	<h1>What I plan to learn</h1>
 	I plan to learn how to align my arrows, images, and text in there correct places. I know that I will still use Float and inline tags.
 	I really love to see testimonials on a website because it really sends a good message to the users or potential buyers.
+
+	<h1>How I fee this relates to what I've learned</h1>
+	This relates to a few things that I've learned, but not many. I have never created a news feed or testimonial section before. I have
+	some experience with making image slide shows so it could be same.
 	<!-- End Component -->
 	
 </body>
