--- a/components/5/component.html
+++ b/components/5/component.html
@@ -11,7 +11,12 @@
 <body>
 
 	<!-- Component -->
+<img src="Footer.png" alt="Footer"/>
 
+	<h1>What I plan to learn</h1>
+	I plan on learning how to place the social media icons where they are inline, as well as adding a "back to top" arrow. I love
+	footers and I really feel like they bring the page together with all of the information that most users look for in order to
+	contact your company.
 	<!-- End Component -->
 	
 </body>
