--- a/components/5/component.html
+++ b/components/5/component.html
@@ -17,6 +17,9 @@
 	I plan on learning how to place the social media icons where they are inline, as well as adding a "back to top" arrow. I love
 	footers and I really feel like they bring the page together with all of the information that most users look for in order to
 	contact your company.
+
+	<h1>How I feel this relates to what I've learned</h1>
+	I feel that this relates to what I have done before. I really think my footer and header are the best things that I know how to do.
 	<!-- End Component -->
 	
 </body>
