--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,16 @@
 /* Project CSS 
 ============================================================
 ============================================================*/
-
+body{
+    text-align: center;
+    margin: 30px;
+}
 
 /* HEADER ============================== */
 
 /* ABOUT ============================== */
 
 /* COMPONENTS ============================== */
+.Comp1{
+    background-color:yellow;
+}
