--- a/css/main.css
+++ b/css/main.css
@@ -4,25 +4,72 @@
 body{
     text-align: center;
     margin: 30px;
-    
+    max-width: 1500px;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+59,efefef+81,d1d1d1+100,9e9e9e+100 */
+    background: rgb(255,255,255); /* Old browsers */
+    background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(255,255,255,1) 59%, rgba(239,239,239,1) 81%, rgba(209,209,209,1) 100%, rgba(158,158,158,1) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,1) 59%,rgba(239,239,239,1) 81%,rgba(209,209,209,1) 100%,rgba(158,158,158,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(255,255,255,1) 59%,rgba(239,239,239,1) 81%,rgba(209,209,209,1) 100%,rgba(158,158,158,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#9e9e9e',GradientType=0 ); /* IE6-9 */
+
 }
 h1{
-    color: darkred;
-
+    font-family: 'Indie Flower', cursive;
+    font-size: 50px;
+}
+h2{
+    font-family: 'Indie Flower', cursive;
+    color:indianred;
+    font-size: 30px;
+    border-style: double;
+}
+h4{
+    color: dimgray;
+    font-weight:bold;
+    font-size: 23px;
+    margin-bottom: 5px;
 }
 
 
 /* HEADER ============================== */
+#img{
+    float:left;
+}
 
 /* ABOUT ============================== */
-p.myself{
-    border-style: dotted;
-    font-weight: 200;
+p{
+    font-size: 20px;
+    margin-top: 5px;
+    width:100%;
+}
+
+.about{
+    padding: 20px;
+    margin: 5%;
 }
 
 /* COMPONENTS ============================== */
+img{
+    width:100%;
+    height:auto;
+}
 
+.Comp1{
+    clear:left;
+}
+
+.Comp2{
+
+}
+
+.Comp3{
+
+}
 
 .Comp4{
     background-color: yellow;
+}
+
+.Comp5{
+
 }
