--- a/components/1/component.html
+++ b/components/1/component.html
@@ -3,24 +3,26 @@
 <head>
 	<title>WSP Component: Janay Peters</title>
 
-	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
+	<!-- <link rel="stylesheet" type="text/css" href="../../css/reset.css" /> -->
 	<link rel="stylesheet" type="text/css" href="component.css" />
-
-	
+	<link href='https://fonts.googleapis.com/css?family=Tienne:400,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Neuton:200' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
 	<!-- Component -->
-<img src="header.png" alt="Header"/>
-
-	<h1>What I hope to learn</h1>
-	I hope to learn how to make my navigation bar position where and how I want it to go. Positioning, sizing, floating, and in-line block are the main parts
-	of creating this, which are things I struggle with so I know it will be a challenge.
-
-	<h1>How I feel this relates to what I have learned</h1>
-	Well, I know that a navigation is easy access to the other main components of the website (Contacts, Information, or a gallery). The navigation is
-	one of the nost important parts of the web page to me, because it is the first thing you see other than the logo. I have also learned that there
-	are many different styles of the navigation. I will be using a simple one, but they all accomplish the same thing; allowing the user to navigate quickly and easly.
+	<header>
+<img src="musicportal.png" alt="logo"/>
+<h1>MUSIC PORTAL</h1>
+<h2>WE OPEN THE NEW MUSIC FOR YOU</h2>
+	</header>
+		<nav>
+			<a href="component.html">HOME</a> |
+			<a href="/css/">MUSIC</a> |
+			<a href="/js/">LISTEN</a> |
+			<a href="/jquery/">CHARTS</a>|
+			<a href="/..">EVENTS</a>
+		</nav>
 	<!-- End Component -->
 	
 </body>
