--- a/components/2/component.html
+++ b/components/2/component.html
@@ -3,7 +3,7 @@
 <head>
 	<title>WSP Component 2: Janay Peters</title>
 
-	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
+	<!-- <link rel="stylesheet" type="text/css" href="../../css/reset.css" /> -->
 	<link rel="stylesheet" type="text/css" href="component.css" />
 
 	
@@ -11,17 +11,37 @@
 <body>
 
 	<!-- Component -->
-<img src="What we do.png" alt="About Us"/>
-
-	<h1>What I hope to learn</h1>
-	I hope to learn how to better use inline and float. I know that this will be my main objective for most of these
-	components, because it is one of those things that I just don't get. I hope to be able to position the icons
-	where they belong, as well as line up the text "in-line" below.
-
-	<h1>How I feel this relates to what I've learned</h1>
-	I feel this relates to the page that I created in one of my other classes. We were to look at the picture and recreate it
-	through code and I had such a hard time creating the "About us" due to inline and Float, so hopefully this time I will be able
-	to pick it up.
+	<section id="about">
+<h1>main services</h1>
+	<article class="page">
+		<img src="page.png" alt="page"/>
+		<h2>Marius fermeum</h2>
+		<p>Aenean aucto wisi et umvolutpatsac turpis. Integertrum ante eu
+			lacues tibulum libe.</p>
+		<button type="button">Read More</button>
+	</article>
+	<article class="pulse">
+		<img src="beat.png" alt="page"/>
+		<h2>Marius fermeum</h2>
+		<p>Aenean aucto wisi et umvolutpatsac turpis. Integertrum ante eu
+			lacues tibulum libe.</p>
+		<button type="button">Read More</button>
+	</article>
+	<article class="clock">
+		<img src="clock.png" alt="page"/>
+		<h2>Marius fermeum</h2>
+		<p>Aenean aucto wisi et umvolutpatsac turpis. Integertrum ante eu
+			lacues tibulum libe.</p>
+		<button type="button">Read More</button>
+	</article>
+	<article class="refresh">
+		<img src="refresh.png" alt="page"/>
+		<h2>Marius fermeum</h2>
+		<p>Aenean aucto wisi et umvolutpatsac turpis. Integertrum ante eu
+			lacues tibulum libe.</p>
+		<button type="button">Read More</button>
+	</article>
+	</section>
 	<!-- End Component -->
 	
 </body>
