--- a/components/3/component.html
+++ b/components/3/component.html
@@ -11,16 +11,22 @@
 <body>
 
 	<!-- Component -->
-<img src="Our Creators.png" alt="Our Creators"/>
+<h1>MEET OUR </br> TEAM</h1>
+	<p>Fusce euismod consequat ante. Lorem ipsum dolor sit amet, consectetuer
+	adipiscing elit. Pellentesque sed dolor. Aliquam congue fermentum nisl.
+	Mauris accumsan nulla vel diam. Sed in lacus ut enim adipiscing aliquet.</p>
 
-	<h1>What I hope to learn</h1>
-	This component is similar to the last. I hope to be able to create this and feel confident that I have done it correctly, but also know
-	what I how to do it before drawing up any code.
+	<h2>John Anderson</h2>
+	<img src="john.png" alt="1"/>
 
-	<h1>How I feel this relates to what I have learned</h1>
-	I feel that this relates to many of the issues that I have when it comes to coding. Creating a section that shows "Our creators"
-	allows the user to get a feel of who created this page and all about who they are. I like seeing these things on websites because it's interesting
-	to see other developers background.
+	<h2>Mark Johnson</h2>
+	<img src="mark.png" alt="2"/>
+
+	<h2>Bradley Grosh</h2>
+	<img src="brad.png" alt="3"/>
+
+	<h2>Anete Puga</h2>
+	<img src="puga.png" alt="4"/>
 	<!-- End Component -->
 	
 </body>
