--- a/components/3/component.css
+++ b/components/3/component.css
@@ -2,3 +2,6 @@
 ============================================================
 ============================================================*/
 
+body{
+    background-color: #f0f0ef;
+}
