--- a/components/5/component.html
+++ b/components/5/component.html
@@ -11,15 +11,26 @@
 <body>
 
 	<!-- Component -->
-<img src="Footer.png" alt="Footer"/>
+<footer class="content">
+	<img src="logo.png" alt="logo"/>
 
-	<h1>What I plan to learn</h1>
-	I plan on learning how to place the social media icons where they are inline, as well as adding a "back to top" arrow. I love
-	footers and I really feel like they bring the page together with all of the information that most users look for in order to
-	contact your company.
+	<div class="wrapper">
 
-	<h1>How I feel this relates to what I've learned</h1>
-	I feel that this relates to what I have done before. I really think my footer and header are the best things that I know how to do.
+		<p> Digital Printing &copy 2016. Privacy Policy</p>
+
+		<p>9863-9867 Mill Road,
+		Cambridge, MG09 99HT
+		Freephone: +1 800 559 6580
+		Fax: +1 800 599 6580</p>
+
+		<form>
+			<input type="text" value="Signup for mail">
+			<input type="submit" value="OK">
+		</form>
+
+	</div>
+
+</footer>
 	<!-- End Component -->
 	
 </body>
