--- a/components/3/component.html
+++ b/components/3/component.html
@@ -5,28 +5,40 @@
 
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
+	<link href='https://fonts.googleapis.com/css?family=Lato:900' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 
-	
 </head>
 <body>
 
 	<!-- Component -->
-<h1>MEET OUR </br> TEAM</h1>
+<div class="container">
+	<h1>MEET OUR </br> TEAM</h1>
+</div>
+
 	<p>Fusce euismod consequat ante. Lorem ipsum dolor sit amet, consectetuer
-	adipiscing elit. Pellentesque sed dolor. Aliquam congue fermentum nisl.
+	adipiscing elit. Pellentesque sed dolor. </br> Aliquam congue fermentum nisl.
 	Mauris accumsan nulla vel diam. Sed in lacus ut enim adipiscing aliquet.</p>
 
-	<h2>John Anderson</h2>
-	<img src="john.png" alt="1"/>
+<table>
+	<ul>
+		<li class="img"><h2>John Anderson</h2>
+			<img src="john.png" alt="1"/>
+		</li>
 
-	<h2>Mark Johnson</h2>
-	<img src="mark.png" alt="2"/>
+		<li class="img2"><h2>Mark Johnson</h2>
+			<img src="mark.png" alt="2"/>
+		</li>
 
-	<h2>Bradley Grosh</h2>
-	<img src="brad.png" alt="3"/>
+		<li class="img3"><h2>Bradley Grosh</h2>
+			<img src="brad.png" alt="3"/>
+		</li>
 
-	<h2>Anete Puga</h2>
-	<img src="puga.png" alt="4"/>
+		<li class="img4"><h2>Anete Puga</h2>
+			<img src="puga.png" alt="4"/>
+		</li>
+	</ul>
+</table>
 	<!-- End Component -->
 	
 </body>
