--- a/components/3/component.css
+++ b/components/3/component.css
@@ -4,4 +4,63 @@
 
 body{
     background-color: #f0f0ef;
+    margin-left:100px;
+    margin-right: 100px;
+}
+
+h1{
+    font-family: 'Lato', sans-serif;
+    font-size: 250%;
+    border-bottom: 6px solid #50bc93;
+    color: #474150;
+}
+
+.container {
+    width:100%;
+    height:120px;
+    padding-right: 750px;
+
+}
+
+h2{
+    margin:0;
+}
+
+p{
+    margin-top: 10px;
+    margin-bottom: 25px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 13px;
+    color: #bebebe
+}
+
+ul{
+    text-align: center;
+    list-style-type:none;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    color: #474150;
+}
+
+img{
+    width: 200px;
+}
+
+li.img{
+    float:left;
+
+}
+
+li.img2{
+    float:left;
+
+}
+
+li.img3{
+    float:left;
+
+}
+
+li.img3{
+    float:left;
 }
