--- a/components/2/component.css
+++ b/components/2/component.css
@@ -10,6 +10,14 @@ body{
 
 h1{
     text-align:center;
+    font-family: 'Roboto', sans-serif;
+    font-size: 100px;
+    font-weight: normal;
+}
+
+h2{
+    font-family: 'Roboto', sans-serif;
+    font-weight:normal;
 }
 
 button{
@@ -22,6 +30,7 @@ button{
 
 p{
     width: 40%;
+
 }
 
 article.page{
@@ -30,14 +39,13 @@ article.page{
 
 article.pulse{
     width:800px;
-
 }
 
 article.clock{
     width:800px;
-
 }
 
 article.refresh{
     width:800px;
+
 }
