--- a/components/2/component.html
+++ b/components/2/component.html
@@ -5,8 +5,9 @@
 
 	<!-- <link rel="stylesheet" type="text/css" href="../../css/reset.css" /> -->
 	<link rel="stylesheet" type="text/css" href="component.css" />
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 
-	
 </head>
 <body>
 
