--- a/components/5/component.html
+++ b/components/5/component.html
@@ -5,7 +5,7 @@
 
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
-
+	<link href='https://fonts.googleapis.com/css?family=Hind' rel='stylesheet' type='text/css'>
 	
 </head>
 <body>
@@ -14,13 +14,11 @@
 <footer class="content">
 	<img src="logo.png" alt="logo"/>
 
-	<div class="wrapper">
+		<p class="below"> Digital Printing &copy 2016. Privacy Policy</p>
 
-		<p> Digital Printing &copy 2016. Privacy Policy</p>
-
-		<p>9863-9867 Mill Road,
-		Cambridge, MG09 99HT
-		Freephone: +1 800 559 6580
+		<p class="right">9863-9867 Mill Road,<br>
+		Cambridge, MG09 99HT<br>
+		Freephone: +1 800 559 6580<br>
 		Fax: +1 800 599 6580</p>
 
 		<form>
@@ -28,7 +26,7 @@
 			<input type="submit" value="OK">
 		</form>
 
-	</div>
+
 
 </footer>
 	<!-- End Component -->
