--- a/components/2/component.html
+++ b/components/2/component.html
@@ -12,37 +12,40 @@
 <body>
 
 	<!-- Component -->
-	<section id="about">
+	<article id="about">
 <h1>main services</h1>
-	<article class="page">
-		<img src="page.png" alt="page"/>
-		<h2>Marius fermeum</h2>
-		<p>Aenean aucto wisi et umvolutpatsac turpis. Integertrum ante eu
-			lacues tibulum libe.</p>
-		<button type="button">Read More</button>
+
+	<ul>
+		<li class="page">
+			<img src="page.png" alt="page"/>
+			<h2>Marius fermeum</h2>
+			<p>Aenean aucto wisi et umvolutpatsac <br> turpis. Integertrum ante eu
+				lacues tibulum libe.</p>
+			<button type="button">Read More</button>
+		</li>
+		<li class="pulse">
+			<img src="beat.png" alt="page"/>
+			<h2>Marius fermeum</h2>
+			<p>Aenean aucto wisi et umvolutpatsac <br> turpis. Integertrum ante eu
+				lacues  tibulum libe.</p>
+			<button type="button">Read More</button>
+		</li>
+		<li class="clock">
+			<img src="clock.png" alt="page"/>
+			<h2>Marius fermeum</h2>
+			<p>Aenean aucto wisi et umvolutpatsac <br> turpis. Integertrum ante eu
+				lacues tibulum libe.</p>
+			<button type="button">Read More</button>
+		</li>
+		<li class="refresh">
+			<img src="refresh.png" alt="page"/>
+			<h2>Marius fermeum</h2>
+			<p>Aenean aucto wisi et umvolutpatsac <br> turpis. Integertrum ante eu
+				lacues tibulum libe.</p>
+			<button type="button">Read More</button>
+		</li>
+	</ul>
 	</article>
-	<article class="pulse">
-		<img src="beat.png" alt="page"/>
-		<h2>Marius fermeum</h2>
-		<p>Aenean aucto wisi et umvolutpatsac turpis. Integertrum ante eu
-			lacues tibulum libe.</p>
-		<button type="button">Read More</button>
-	</article>
-	<article class="clock">
-		<img src="clock.png" alt="page"/>
-		<h2>Marius fermeum</h2>
-		<p>Aenean aucto wisi et umvolutpatsac turpis. Integertrum ante eu
-			lacues tibulum libe.</p>
-		<button type="button">Read More</button>
-	</article>
-	<article class="refresh">
-		<img src="refresh.png" alt="page"/>
-		<h2>Marius fermeum</h2>
-		<p>Aenean aucto wisi et umvolutpatsac turpis. Integertrum ante eu
-			lacues tibulum libe.</p>
-		<button type="button">Read More</button>
-	</article>
-	</section>
 	<!-- End Component -->
 	
 </body>
