--- a/components/4/component.html
+++ b/components/4/component.html
@@ -5,13 +5,35 @@
 
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
+	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic' rel='stylesheet' type='text/css'>
 
-	
 </head>
 <body>
 
 	<!-- Component -->
+<table>
+	<tr>
+		<td width="20%">
+			<img src="left.png" alt="arrow"/>
+		</td>
 
+		<td width="10px">
+			<img src="main.png" alt="main"/>
+		</td>
+
+		<td class="three">
+			<p class="quote">Quisque condimentum nec mauris rutrum consectetur.</p>
+
+			<p class="name">-Dave Moore</p>
+		</td>
+
+		<td class="third">
+		<img src="right.png" alt="arrow"/>
+		</td>
+
+	</tr>
+</table>
 	<!-- End Component -->
 	
 </body>
