--- a/components/4/component.css
+++ b/components/4/component.css
@@ -2,3 +2,36 @@
 ============================================================
 ============================================================*/
 
+body{
+    background-color: #f3f3f3;
+    max-width: 1400px;
+}
+
+table{
+    margin-left: 280px;
+    margin-right: 280px;
+    margin-top: 100px;
+    margin-bottom: 245px;
+}
+
+p.name{
+    font-family: 'Roboto', sans-serif;
+}
+
+p.quote{
+    font-family: 'Open Sans', sans-serif;
+}
+
+table{
+    width:100%;
+}
+
+td.first{
+    margin-right: 30px;
+}
+
+td.three{
+    vertical-align: middle;
+}
+
+
