--- a/components/1/component.css
+++ b/components/1/component.css
@@ -25,8 +25,16 @@ img{
 }
 
 nav{
-    margin: 50px;
-    font-family: 'Tienne', serif
+    margin-top: 80px;
+}
+
+nav li{
+    display: inline;
+}
+
+nav li a{
+    padding: 0.25rem 1.5rem;
+    font-weight: 600;
 }
 
 a{
