--- a/components/1/component.html
+++ b/components/1/component.html
@@ -17,11 +17,27 @@
 <h2>WE OPEN THE NEW MUSIC FOR YOU</h2>
 	</header>
 		<nav>
-			<a href="component.html">HOME</a> |
-			<a href="/css/">MUSIC</a> |
-			<a href="/js/">LISTEN</a> |
-			<a href="/jquery/">CHARTS</a>|
-			<a href="/..">EVENTS</a>
+			<ul>
+				<li>
+					<a href>HOME</a> |
+				</li>
+
+				<li>
+					<a href>MUSIC</a> |
+				</li>
+
+				<li>
+					<a href>LISTEN</a> |
+				</li>
+
+				<li>
+					<a href>CHARTS</a> |
+				</li>
+
+				<li>
+					<a href>EVENTS</a>
+				</li>
+			</ul>
 		</nav>
 	<!-- End Component -->
 	
