--- a/components/1/component.html
+++ b/components/1/component.html
@@ -24,6 +24,23 @@
 
 				<li>
 					<a href>MUSIC</a> |
+						<ul>
+							<li>
+								<a href>Pop</a>
+							</li>
+							<li>
+								<a href>Hip-Hop</a>
+							</li>
+							<li>
+								<a href>Alternative</a>
+							</li>
+							<li>
+								<a href>Reggae</a>
+							</li>
+							<li>
+								<a href>Latin</a>
+							</li>
+						</ul>
 				</li>
 
 				<li>
