--- a/components/3/component.html
+++ b/components/3/component.html
@@ -12,33 +12,36 @@
 <body>
 
 	<!-- Component -->
-<div class="container">
-	<h1>MEET OUR </br> TEAM</h1>
-</div>
+<section>
+	<header class="container">
+		<h1>MEET OUR </br> TEAM</h1>
+	</header>
 
 	<p>Fusce euismod consequat ante. Lorem ipsum dolor sit amet, consectetuer
 	adipiscing elit. Pellentesque sed dolor. </br> Aliquam congue fermentum nisl.
 	Mauris accumsan nulla vel diam. Sed in lacus ut enim adipiscing aliquet.</p>
 
-<table>
-	<ul>
-		<li class="img"><h2>John Anderson</h2>
+		<article class="img">
+			<h2>John Anderson</h2>
 			<img src="john.png" alt="1"/>
-		</li>
+		</article>
 
-		<li class="img2"><h2>Mark Johnson</h2>
+		<article class="img2">
+			<h2>Mark Johnson</h2>
 			<img src="mark.png" alt="2"/>
-		</li>
+		</article>
 
-		<li class="img3"><h2>Bradley Grosh</h2>
+		<article class="img3">
+			<h2>Bradley Grosh</h2>
 			<img src="brad.png" alt="3"/>
-		</li>
+		</article>
 
-		<li class="img4"><h2>Anete Puga</h2>
+		<article class="img4">
+			<h2>Anete Puga</h2>
 			<img src="puga.png" alt="4"/>
-		</li>
-	</ul>
-</table>
+		</article>
+
+</section>
 	<!-- End Component -->
 	
 </body>
