--- a/components/3/component.css
+++ b/components/3/component.css
@@ -18,12 +18,14 @@ h1{
 .container {
     width:100%;
     height:120px;
-    padding-right: 750px;
+    padding-right: 1680px;
 
 }
 
 h2{
-    margin:0;
+    margin:2rem 0 1rem 0 ;
+    color: #4c4655;
+    font-family: 'Lato', sans-serif;
 }
 
 p{
@@ -43,24 +45,11 @@ ul{
 }
 
 img{
-    width: 200px;
+    width: 250px;
 }
 
-li.img{
+article{
     float:left;
-
-}
-
-li.img2{
-    float:left;
-
-}
-
-li.img3{
-    float:left;
-
-}
-
-li.img3{
-    float:left;
+    padding: 20px;
+    text-align:center;
 }
