--- a/components/1/component.html
+++ b/components/1/component.html
@@ -13,17 +13,17 @@
 	<!-- Component -->
 	<header>
 <img src="musicportal.png" alt="logo"/>
-<h1>MUSIC PORTAL</h1>
-<h2>WE OPEN THE NEW MUSIC FOR YOU</h2>
+<h1>Music Portal</h1>
+<h2>We Open The New Music For You</h2>
 	</header>
 		<nav>
 			<ul>
 				<li>
-					<a href>HOME</a> |
+					<a href>Home</a>
 				</li>
 
 				<li>
-					<a href>MUSIC</a> |
+					<a href>Music</a>
 						<ul>
 							<li>
 								<a href>Pop</a>
@@ -44,15 +44,15 @@
 				</li>
 
 				<li>
-					<a href>LISTEN</a> |
+					<a href>Listen</a>
 				</li>
 
 				<li>
-					<a href>CHARTS</a> |
+					<a href>Charts</a>
 				</li>
 
 				<li>
-					<a href>EVENTS</a>
+					<a href>Events</a>
 				</li>
 			</ul>
 		</nav>
