--- a/components/5/component.html
+++ b/components/5/component.html
@@ -14,18 +14,21 @@
 <footer class="content">
 	<img src="logo.png" alt="logo"/>
 
-		<p class="below"> Digital Printing &copy 2016. Privacy Policy</p>
+		<article class="below">
+			Digital Printing &copy 2016. Privacy Policy
+		</article>
 
-		<p class="right">9863-9867 Mill Road,<br>
-		Cambridge, MG09 99HT<br>
-		Freephone: +1 800 559 6580<br>
-		Fax: +1 800 599 6580</p>
+		<article class="right">
+			9863-9867 Mill Road,<br>
+			Cambridge, MG09 99HT<br>
+			Freephone: +1 800 559 6580<br>
+			Fax: +1 800 599 6580
+		</article>
 
 		<form>
 			<input type="text" value="Signup for mail">
 			<input type="submit" value="OK">
 		</form>
-
 
 
 </footer>
