--- a/components/2/component.html
+++ b/components/2/component.html
@@ -12,40 +12,42 @@
 <body>
 
 	<!-- Component -->
-	<article id="about">
-<h1>main services</h1>
+<header>
+	<h1>main services</h1>
+</header>
 
-	<ul>
-		<li class="page">
+	<section id="about">
+
+		<article class="page">
 			<img src="page.png" alt="page"/>
 			<h2>Marius fermeum</h2>
 			<p>Aenean aucto wisi et umvolutpatsac <br> turpis. Integertrum ante eu
 				lacues tibulum libe.</p>
 			<button type="button">Read More</button>
-		</li>
-		<li class="pulse">
+		</article>
+		<article class="pulse">
 			<img src="beat.png" alt="page"/>
 			<h2>Marius fermeum</h2>
 			<p>Aenean aucto wisi et umvolutpatsac <br> turpis. Integertrum ante eu
 				lacues  tibulum libe.</p>
 			<button type="button">Read More</button>
-		</li>
-		<li class="clock">
+		</article>
+		<article class="clock">
 			<img src="clock.png" alt="page"/>
 			<h2>Marius fermeum</h2>
 			<p>Aenean aucto wisi et umvolutpatsac <br> turpis. Integertrum ante eu
 				lacues tibulum libe.</p>
 			<button type="button">Read More</button>
-		</li>
-		<li class="refresh">
+		</article>
+		<article class="refresh">
 			<img src="refresh.png" alt="page"/>
 			<h2>Marius fermeum</h2>
 			<p>Aenean aucto wisi et umvolutpatsac <br> turpis. Integertrum ante eu
 				lacues tibulum libe.</p>
 			<button type="button">Read More</button>
-		</li>
-	</ul>
-	</article>
+		</article>
+
+	</section>
 	<!-- End Component -->
 	
 </body>
