--- a/components/5/component.html
+++ b/components/5/component.html
@@ -12,24 +12,25 @@
 
 	<!-- Component -->
 <footer class="content">
-	<img src="logo.png" alt="logo"/>
+	<img src="logo.png" alt="Digital Printing"/>
 
-		<article class="below">
+	<ul>
+		<li class="Policy">
 			Digital Printing &copy 2016. Privacy Policy
-		</article>
-
-		<article class="right">
+		</li>
+		<li class="address">
 			9863-9867 Mill Road,<br>
 			Cambridge, MG09 99HT<br>
 			Freephone: +1 800 559 6580<br>
 			Fax: +1 800 599 6580
-		</article>
-
-		<form>
-			<input type="text" value="Signup for mail">
-			<input type="submit" value="OK">
-		</form>
-
+		</li>
+		<li class="form">
+			<form>
+				<input type="text" value="Signup for mail">
+				<input type="submit" value="OK">
+			</form>
+		</li>
+	</ul>
 
 </footer>
 	<!-- End Component -->
