--- a/components/5/component.html
+++ b/components/5/component.html
@@ -27,7 +27,7 @@
 		<li class="form">
 			<form>
 				<input type="text" value="Signup for mail">
-				<input type="submit" value="OK">
+				<input type="submit" value="ok">
 			</form>
 		</li>
 	</ul>
