--- a/components/5/component.css
+++ b/components/5/component.css
@@ -62,3 +62,33 @@ img {
 
 }
 
+input[type=submit] {
+
+    background-color: transparent;
+
+    color: lightgrey;
+
+    font-size: 45px;
+}
+
+input[type=text] {
+    border-style: solid;
+
+    border-width: 1px;
+
+    border-left: none;
+
+    border-right: none;
+
+    border-top: none;
+
+    border-color: red;
+
+    background-color: transparent;
+
+    color: lightgrey;
+    
+
+
+}
+
