--- a/components/3/component.html
+++ b/components/3/component.html
@@ -3,7 +3,7 @@
 <head>
 	<title>WSP Component 3: Janay Peters</title>
 
-	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
+	<!-- <link rel="stylesheet" type="text/css" href="../../css/reset.css" /> -->
 	<link rel="stylesheet" type="text/css" href="component.css" />
 	<link href='https://fonts.googleapis.com/css?family=Lato:900' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
@@ -13,8 +13,8 @@
 
 	<!-- Component -->
 <section>
-	<header class="container">
-		<h1>MEET OUR </br> TEAM</h1>
+	<header>
+		<h1>Meet Our </br> Team</h1>
 	</header>
 
 	<p>Fusce euismod consequat ante. Lorem ipsum dolor sit amet, consectetuer
