--- a/components/3/component.css
+++ b/components/3/component.css
@@ -6,20 +6,16 @@ body{
     background-color: #f0f0ef;
     margin-left:100px;
     margin-right: 100px;
+    max-width:1160px;
 }
 
 h1{
     font-family: 'Lato', sans-serif;
-    font-size: 250%;
+    font-size: 50px;
+    text-transform: uppercase;
     border-bottom: 6px solid #50bc93;
     color: #474150;
-}
-
-.container {
-    width:100%;
-    height:120px;
-    padding-right: 1680px;
-
+    margin-right: 800px;
 }
 
 h2{
