--- a/components/1/component.html
+++ b/components/1/component.html
@@ -18,11 +18,11 @@
 	</header>
 		<nav>
 			<ul>
-				<li>
+				<li class="home">
 					<a href>Home</a>
 				</li>
 
-				<li>
+				<li class="music">
 					<a href>Music</a>
 						<ul>
 							<li>
@@ -43,15 +43,15 @@
 						</ul>
 				</li>
 
-				<li>
+				<li class="listen">
 					<a href>Listen</a>
 				</li>
 
-				<li>
+				<li class="charts">
 					<a href>Charts</a>
 				</li>
 
-				<li>
+				<li class="events">
 					<a href>Events</a>
 				</li>
 			</ul>
