--- a/components/4/component.html
+++ b/components/4/component.html
@@ -12,28 +12,28 @@
 <body>
 
 	<!-- Component -->
-<table>
-	<tr>
-		<td width="20%">
+<section>
+	<ul>
+		<li class="left_arrow">
 			<img src="left.png" alt="arrow"/>
-		</td>
+		</li>
 
-		<td width="10px">
+		<li class="symbol">
 			<img src="main.png" alt="main"/>
-		</td>
+		</li>
 
-		<td class="three">
-			<p class="quote">Quisque condimentum nec mauris rutrum consectetur.</p>
+		<li class="description">
+			<p class="quote">"Quisque condimentum nec mauris rutrum consectetur."</p>
 
-			<p class="name">-Dave Moore</p>
-		</td>
+			<p class="author">-Dave Moore</p>
+		</li>
 
-		<td class="third">
+		<li class="right_arrow">
 		<img src="right.png" alt="arrow"/>
-		</td>
+		</li>
 
-	</tr>
-</table>
+	</ul>
+</section>
 	<!-- End Component -->
 	
 </body>
