--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,7 @@
 ============================================================*/
 body{
     text-align: center;
-    margin: 30px;
-    max-width: 1500px;
+    max-width: 1440px;
     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+59,efefef+81,d1d1d1+100,9e9e9e+100 */
     background: rgb(255,255,255); /* Old browsers */
     background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(255,255,255,1) 59%, rgba(239,239,239,1) 81%, rgba(209,209,209,1) 100%, rgba(158,158,158,1) 100%); /* FF3.6-15 */
@@ -51,9 +50,15 @@ p{
 
 .about{
     padding: 20px;
-    margin: 5%;
+
 }
 
+section{
+    margin-right:110.500px;
+    margin-left:110.500px;
+    max-width: 960px;
+
+}
 /* COMPONENTS ============================== */
 img{
     width:100%;
