--- a/components/1/component.html
+++ b/components/1/component.html
@@ -45,14 +45,65 @@
 
 				<li class="listen">
 					<a href>Listen</a>
+					<ul>
+						<li>
+							<a href>Pop</a>
+						</li>
+						<li>
+							<a href>Hip-Hop</a>
+						</li>
+						<li>
+							<a href>Alternative</a>
+						</li>
+						<li>
+							<a href>Reggae</a>
+						</li>
+						<li>
+							<a href>Latin</a>
+						</li>
+					</ul>
 				</li>
 
 				<li class="charts">
 					<a href>Charts</a>
+					<ul>
+						<li>
+							<a href>Pop</a>
+						</li>
+						<li>
+							<a href>Hip-Hop</a>
+						</li>
+						<li>
+							<a href>Alternative</a>
+						</li>
+						<li>
+							<a href>Reggae</a>
+						</li>
+						<li>
+							<a href>Latin</a>
+						</li>
+					</ul>
 				</li>
 
 				<li class="events">
 					<a href>Events</a>
+					<ul>
+						<li>
+							<a href>Pop</a>
+						</li>
+						<li>
+							<a href>Hip-Hop</a>
+						</li>
+						<li>
+							<a href>Alternative</a>
+						</li>
+						<li>
+							<a href>Reggae</a>
+						</li>
+						<li>
+							<a href>Latin</a>
+						</li>
+					</ul>
 				</li>
 			</ul>
 		</nav>
