--- a/components/5/component.html
+++ b/components/5/component.html
@@ -29,6 +29,7 @@
 				<input type="text" value="Signup for mail">
 				<input type="submit" value="ok">
 			</form>
+			<img src="social.png" alt="Social Media Icons"/>
 		</li>
 	</ul>
 
