--- a/css/main.css
+++ b/css/main.css
@@ -4,18 +4,28 @@
 body{
     text-align: center;
     max-width: 1440px;
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+59,efefef+81,d1d1d1+100,9e9e9e+100 */
-    background: rgb(255,255,255); /* Old browsers */
-    background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(255,255,255,1) 59%, rgba(239,239,239,1) 81%, rgba(209,209,209,1) 100%, rgba(158,158,158,1) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,1) 59%,rgba(239,239,239,1) 81%,rgba(209,209,209,1) 100%,rgba(158,158,158,1) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(255,255,255,1) 59%,rgba(239,239,239,1) 81%,rgba(209,209,209,1) 100%,rgba(158,158,158,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#9e9e9e',GradientType=0 ); /* IE6-9 */
-
 }
 h1{
     font-family: 'Indie Flower', cursive;
     font-size: 50px;
+    animation-duration: 3s;
+    animation-name: slidein;
+    animation-iteration-count: 3;
+    animation-direction: alternate;
 }
+
+@keyframes slidein {
+    from {
+        margin-left:100%;
+        width:300%
+    }
+
+    to {
+        margin-left:0%;
+        width:100%;
+    }
+}
+
 h2{
     font-family: 'Indie Flower', cursive;
     color:indianred;
